Bugfix: Prevent Embedded Video Clipping in Safari (#1957)
This PR addresses a bug where iframe video players like YouTube or
Vimeo used in an Embed object would offset to the left when playing
in Safari, resulting in the left side of the player being cut off.

Fixes #828

--- a/src/mixins/_ratio-box.scss
+++ b/src/mixins/_ratio-box.scss
@@ -39,9 +39,13 @@ $aspect-ratio-map: meta.module-variables('aspect-ratio');
     inline-size: 100%;
     inset-block-start: 0;
     inset-inline-start: 0;
+    position: absolute;
+  }
+
+  > img,
+  > picture > img {
     object-fit: cover;
     object-position: center;
-    position: absolute;
   }
 }
 
